--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="bb2">5. Offer 2</div>
         <div class="side-menu">6. Left side menu</div>
         <div class="tags">7. Some tags here</div>
-        <div class="recent">8. Recently viewed </div>
+        <div class="recent">8. Recently viewed! </div>
         <main class="main">
             <div class="">9. Product 1</div>
             <div class="">9. Product 1</div>
